# kaist-menu

./: .gitignore  LICENSE  Pipfile  README.md  kaist_menu.py  menu.py  menu.sh  pyproject.toml
